test/corpus/empty_argument_list.txt
==================
Empty argument list
==================

bundle agent my_bundle() {
}

---

(source_file
  (block
    (bundle
      (bundle_type)
      (bundle_id)
      (argument_list)
      (bundle_body))))
