test/corpus/identifier_promisee.txt
==================
Identifier as promisee
==================

bundle agent my_bundle {
  reports:
      "promiser" -> promisee;
}

---

(source_file
  (block
    (bundle
      (bundle_type)
      (bundle_id)
      (bundle_body
        (bundle_statement
          (promise_guard)
          (promise_line
            (promiser)
            (promisee
              (identifier))))))))
