test/corpus/promise_line_quoted_promisee.txt
==================
Promise line with quoted string as promisee
==================

bundle agent my_bundle {
  reports:
      "promiser" -> "promisee";
}

---

(source_file
  (block
    (bundle
      bundle_type: (identifier)
      bundle_id: (identifier)
      (bundle_body
        (bundle_statement
          (promise_guard)
          (promise_line
            promiser: (quoted_string)
            promisee: (right_value
              (quoted_string))))))))
