test/corpus/trailing_argument_list.txt
==================
Argument list with trailing comma
==================

bundle agent my_bundle(one, two, three,) {
}

---

(source_file
  (block
    (bundle
      (bundle_type)
      (bundle_id)
      (argument_list
        (argument)
        (argument)
        (argument))
      (bundle_body))))
