test/corpus/trailing_comma_argument_list.txt
==================
Trailing comma argument list
==================

bundle agent my_bundle(one, two, three,) {
}

---

(source_file
  (block
    (bundle
      bundle_type: (identifier)
      bundle_id: (identifier)
      (argument_list
        (identifier)
        (identifier)
        (identifier))
      (bundle_body)
    )))
